--- a/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
+++ b/src/app/modules/tour-plan/view-tour-plan/view-tour-plan.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">Tour Plan List</div>
+            <div class="heading">Tour Plan For Approval</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
             <p class="text-right">
@@ -21,11 +21,11 @@
 
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
-            <div [formGroup]="TourPlan">
+            <div [formGroup]="tourPlanApprovalForm">
 
 
                 <div class="flex mt-1" style="flex-wrap: wrap;">
-                    <app-zone-branch-circle [form]="TourPlan" [should_hide_fields]="true"
+                    <app-zone-branch-circle [form]="tourPlanApprovalForm" [should_hide_fields]="true"
                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
@@ -33,7 +33,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">From</mat-label>
                                 <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
-                                       formControlName="StartDate" (dateChange)="setFromDate()"
+                                       formControlName="FromDate" (dateChange)="setFromDate()" #to_date
                                        autocomplete="off">
                                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
@@ -46,10 +46,18 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">To</mat-label>
                                 <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy"
-                                       formControlName="EndDate" [min]="minDate"
+                                       formControlName="ToDate" [min]="minDate"
                                        (dateChange)="setToDate()" autocomplete="off">
                                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                                 <mat-datepicker #picker1></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label>PPNO</mat-label>
+                                <input matInput formControlName="PPNO">
                             </mat-form-field>
                         </div>
                     </div>
@@ -70,7 +78,7 @@
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <button (click)="SearchTourPlan()" type="button"
+                            <button (click)="searchTourPlanApproval()" type="button"
                                     class=" mt-2 mat-raised-button mat-button-base bg-gray-500 kt-login__btn-primary btn-block mat-primary">
                                 <mat-icon class="mr-2">search</mat-icon>
                                 Search
@@ -83,125 +91,20 @@
         </div>
     </div>
 
-
-    <!-- Header -->
-
-    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50"
-         style="flex-direction: column;overflow-y: scroll">
-        <div class="example-table-container  px-2">
-
-            <!--           table -->
-
-            <div class="custom-accordion   rounded-lg my-2 bg-white shadow-sm border"
-                 *ngFor="let activity of TourPlans | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} ; let i = index;">
-                <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
-                     style="cursor: pointer">
-                    <div class=" self-center ml-8">
-                        <span class=" text-green">
-                            {{dateChange(activity.VisitedDate)}}
-                        </span>
-                    </div>
+    <mat-tab-group [ngClass]="{'dash-tab': TourPlans?.length == 1}"
+                   class="pt-3 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"
+                   style="flex-direction: column; overflow-y: scroll"
+                   animationDuration="200ms" style="background-color: white;">
 
 
-                    <div class="mr-5">
-                        <!--                <button mat-icon-button color="warn"-->
-                        <!--                        (click)="deleteActivity(activity)">-->
-                        <!--                  <mat-icon>-->
-                        <!--                    delete-->
-                        <!--                  </mat-icon>-->
-                        <!--                </button>-->
-                        <!--                <button class="ml-2" mat-icon-button color="primary"-->
-                        <!--                        (click)="editActivity(activity)">-->
-                        <!--                  <mat-icon>-->
-                        <!--                    edit-->
-                        <!--                  </mat-icon>-->
-                        <!--                </button>-->
-                        <button mat-icon-button id="{{'arrow_down_'+i}}" style="display: block">
-                            <mat-icon>expand_more</mat-icon>
-                        </button>
-                        <button mat-icon-button id="{{'arrow_up_'+i}}" style="display:none;">
-                            <mat-icon>expand_less</mat-icon>
-                        </button>
-                    </div>
-                </div>
-                <div class="custom-accordion-body" id="{{'table_'+i}}" style="display: none">
-                    <table class="table table-responsive" style="display: inline-table !important;">
-                        <thead class="thead-light">
-                        <tr class="table-header-background">
-                            <th>Zone</th>
-                            <th>Branch</th>
-                            <th>Circle</th>
-                            <th>Visit Date</th>
-                            <th>Purpose</th>
-                            <th>Remarks</th>
-                            <th>Status</th>
-<!--                            <th>Actions</th>-->
-
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let child of activity.TourPlans">
-                            <td style="width: 20%">{{getZoneName(child?.ZoneId)}}</td>
-                            <td style="width: 20%">{{getBranchName(child?.BranchId)}}</td>
-                            <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
-                            <td style="width: 20%">{{dateChange(child.VisitedDate)}}</td>
-                            <td style="width: 20%">{{child.PurposeName}}</td>
-                            <td [title]="child.Remarks">
-                                <p class="remarks-box">
-                                    {{child.Remarks.slice(0, 30)}}
-                                </p>
-                            </td>
-                            <td style="width: 20%">{{child.StatusName}}</td>
-
-<!--                            <td style="width: 20%">-->
-
-<!--                                &lt;!&ndash;                                <button mat-icon-button color="primary" *ngIf="CheckViewStatus(child)"&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                        (click)="viewTourPlan(child)">&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                    <mat-icon class="text-green" title="View land">visibility</mat-icon>&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                </button>&ndash;&gt;-->
-
-<!--&lt;!&ndash;                                <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"&ndash;&gt;-->
-<!--&lt;!&ndash;                                        (click)="editTourPlan(child)">&ndash;&gt;-->
-<!--&lt;!&ndash;                                    <mat-icon style="margin-left: 5px;" title="Edit Tour Plan">edit</mat-icon>&ndash;&gt;-->
-<!--&lt;!&ndash;                                </button>&ndash;&gt;-->
-
-<!--                                &lt;!&ndash;                                <button class="ml-2" mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                        (click)="deleteTourPlan(child)">&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                    <mat-icon style="margin-left: 5px;" title="Delete Tour Plan">delete</mat-icon>&ndash;&gt;-->
-<!--                                &lt;!&ndash;                                </button>&ndash;&gt;-->
-
-<!--                            </td>-->
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-            </div>
+        <ng-container *ngFor="let item of TourPlans;let i=index;">
+            <mat-tab [label]="item.Heading">
+                <app-view-tour-tab [TourPlans]="item" [branch]="branch" [zone]="zone"
+                                       [circle]="circle"
+                                       [tourPlanApprovalForm]="tourPlanApprovalForm.value"></app-view-tour-tab>
+            </mat-tab>
+        </ng-container>
+    </mat-tab-group>
 
 
-            <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-
-        </div>
-
-    </div>
-    <div *ngIf="matTableLenght" class="mat-select" style="padding:0px 5px; font-size: 13px; margin-top:10px;">
-        <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-        <span class="font-bold text-green">Items per page:</span>
-
-        <mat-select class="border-2 pl-1 py-2" display="inline" [(value)]="itemsPerPage"
-                    (valueChange)="paginate(1,$event)"
-                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-            <mat-option [value]="5">5</mat-option>
-            <mat-option [value]="10">10</mat-option>
-            <mat-option [value]="25">25</mat-option>
-            <mat-option [value]="50">50</mat-option>
-        </mat-select>
-        <button (click)="paginate(1)">First</button>
-        <pagination-controls display="inline" (pageChange)="paginate($event)"
-                             style="display: inline-block;"></pagination-controls>
-        <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b class="text-green">{{totalItems}}</b> items</p>
-
-    </div>
 </div>
