--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -31,7 +31,7 @@
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <app-zone-branch-circle [form]="gridForm" [show_circle]="false"
-                                                            [is_required_circle]="false"
+                                                            [is_required_circle]="false" [should_filter]="false"
                                                             (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
@@ -223,13 +223,13 @@
                                     <tbody>
                                     <tr *ngFor="let rcDiary of TourDiaryList">
                                         <td>
-                                            <button type="button" class="ml-2" mat-icon-button color="primary" (click)="edit(rcDiary)"
+                                            <button type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(rcDiary, 'edit')" (click)="edit(rcDiary)"
                                             >
                                                 <mat-icon>
                                                     edit
                                                 </mat-icon>
                                             </button>
-                                            <button type="button" mat-icon-button (click)="delete(rcDiary,'C')">
+                                            <button  *ngIf="checkStatus(rcDiary, 'delete')"  type="button" mat-icon-button (click)="delete(rcDiary,'C')">
                                                 <mat-icon class="text-red-500">
                                                     delete_forever
                                                 </mat-icon>
