--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -271,10 +271,10 @@
                                             </mat-form-field>
                                         </td>
                                         <td class="border-r border-gray-400">
-                                            <button type="button" mat-icon-button (click)="edit(single_list)">
+                                            <button *ngIf="checkStatus(single_list, 'edit')" type="button" mat-icon-button (click)="edit(single_list)">
                                                 <mat-icon>edit</mat-icon>
                                             </button>
-                                            <button type="button" mat-icon-button (click)="delete(single_list)">
+                                            <button  *ngIf="checkStatus(single_list, 'delete')" type="button" mat-icon-button (click)="delete(single_list,'C')">
                                                 <mat-icon>delete</mat-icon>
                                             </button>
                                         </td>
