--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -66,9 +66,15 @@
                         </td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
 
-                        <td style="width: 20%">
-                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"
-                                          (change)="changeCheckBox(activity,child)"></mat-checkbox>
+<!--                        <td style="width: 20%">-->
+<!--                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"-->
+<!--                                          (change)="changeCheckBox(activity,child)"></mat-checkbox>-->
+<!--                        </td>-->
+                        <td>
+                            <button mat-icon-button color="primary" *ngIf="CheckEditStatus(child)"
+                                    (click)="editloanutilization(child)">
+                                <mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>
+                            </button>
                         </td>
                     </tr>
                     </tbody>
