--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -59,17 +59,12 @@
                         <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
                         <td style="width: 20%">{{child.VisitedDate ? dateChange(child?.VisitedDate) : '-'}}</td>
                         <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
-                        <td style="width: 20%" [title]="child.Remarks">
+                        <td style="width: 20%" [title]="child?.Remarks">
                             <p class="remarks-box">
-                                {{child.Remarks.slice(0, 30)}}
+                                {{child?.Remarks?.slice(0, 30)}}
                             </p>
                         </td>
                         <td style="width: 20%">{{child?.StatusName}}</td>
-
-<!--                        <td style="width: 20%">-->
-<!--                            <mat-checkbox *ngIf="checkBoxCheck(child.Status)"-->
-<!--                                          (change)="changeCheckBox(activity,child)"></mat-checkbox>-->
-<!--                        </td>-->
                         <td>
                             <button mat-icon-button color="primary" *ngIf="CheckDirectionStatus(child)"
                                     (click)="redirectTourDiary(child)">
