--- a/src/app/modules/tour-dairy/tour-diary-approval-pc/tour-diary-approval-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-pc/tour-diary-approval-pc.component.html
@@ -131,5 +131,20 @@
 
     </div>
 
+    <div class="row mt-2 mr-1">
+        <div class="col-lg-12 text-right">
+            <button type="button" class="mr-2 bg-green" mat-raised-button color="primary"
+                    (click)="approve()">
+                <mat-icon class="mr-2">check_circle</mat-icon>
+                Save
+            </button>
+            <button type="button" class="mr-2  bg-red" mat-raised-button color="primary"
+                    (click)="referback()">
+                <mat-icon class="mr-2">cancel</mat-icon>
+                Referback
+            </button>
+        </div>
+    </div>
+
 </div>
 
