--- a/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-tab/tour-diary-approval-tab.component.html
@@ -44,12 +44,11 @@
                         <th>Zone</th>
                         <th>Branch</th>
                         <th>Circle</th>
-                        <th>Visit Date</th>
+                        <th>Tour Date</th>
                         <th>Purpose</th>
                         <th>Remarks</th>
                         <th>Status</th>
                         <th>Actions</th>
-
                     </tr>
                     </thead>
                     <tbody>
@@ -57,8 +56,8 @@
                         <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
                         <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
                         <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
-                        <td style="width: 20%">{{child.VisitedDate ? dateChange(child?.VisitedDate) : '-'}}</td>
-                        <td style="width: 20%">{{child.PurposeName ? child.PurposeName : '-'}}</td>
+                        <td style="width: 20%">{{child.TourDate ? dateChange(child?.TourDate) : '-'}}</td>
+                        <td style="width: 20%">{{child.PlanPurposeName ? child.PlanPurposeName : '-'}}</td>
                         <td style="width: 20%" [title]="child?.Remarks">
                             <p class="remarks-box">
                                 {{child?.Remarks?.slice(0, 30)}}
