--- a/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-mco/tour-diary-approval-mco.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="gridForm"
+<div
      class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
     <div class="row pt-3">
         <div class="col-lg-12 p-0 col-sm-12">
@@ -61,8 +61,8 @@
 <!--                        </button>-->
 
 <!--                    </td>-->
-                    <td>{{dateChange(mcoDiary.TourDate)}}</td>
-                    <td></td>
+                    <td>{{dateChange(mcoDiary?.TourDate)}}</td>
+                    <td>{{mcoDiary?.PlanPurposeName}}</td>
                     <td>{{mcoDiary?.DepartureFromPlace}}</td>
                     <td>{{mcoDiary?.DepartureFromTime}}</td>
                     <td>{{mcoDiary?.ArrivalAtPlace}}</td>
@@ -111,7 +111,6 @@
                     </td>
                     <td>-</td>
                     <td></td>
-                    <td>-</td>
                     <td>-</td>
                     <td>-</td>
                 </tr>
