--- a/src/app/modules/tour-dairy/tour-diary-approval-ro/tour-diary-approval-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-ro/tour-diary-approval-ro.component.html
@@ -31,7 +31,6 @@
                                     recovery
                                 </th>
                                 <th rowspan="3" class="border-r border-gray-400">Remarks</th>
-                                <th rowspan="3" class="border-r border-gray-400">Actions</th>
                             </tr>
 
                             <tr class="table-header-background text-center">
@@ -101,16 +100,6 @@
                                                     appearance="outline" style="width: 12rem !important">
                                         <input matInput [value]="single_list.Remarks">
                                     </mat-form-field>
-                                </td>
-                                <td class="border-r border-gray-400">
-                                    <button *ngIf="checkStatus(single_list, 'edit')" type="button" mat-icon-button
-                                            (click)="edit(single_list)">
-                                        <mat-icon>edit</mat-icon>
-                                    </button>
-                                    <button *ngIf="checkStatus(single_list, 'delete')" type="button" mat-icon-button
-                                            (click)="delete(single_list,'C')">
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
                                 </td>
                             </tr>
                             </tbody>
@@ -201,12 +190,12 @@
     <div class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
             <button type="button" class="mr-2 bg-green" mat-raised-button color="primary"
-                    (click)="approve()">
+                    (click)="changeStatus('A')">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Approve
             </button>
             <button type="button" class="mr-2  bg-red" mat-raised-button color="primary"
-                    (click)="referback()">
+                    (click)="changeStatus('R')">
                 <mat-icon class="mr-2">cancel</mat-icon>
                 Referback
             </button>
